# arvi

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: docs-gh-pages.yml  install.yml  python-publish.yml
arvi/: HZ.py  __init__.py  ariadne_wrapper.py  berv.py  binning.py  config.py  dace_wrapper.py  exofop_wrapper.py  extra_data.py  gaia_wrapper.py  headers.py  instrument_specific.py  kepmodel_wrapper.py  kima_wrapper.py  lbl_wrapper.py  nasaexo_wrapper.py  plots.py  programs.py  reports.py  setup_logger.py  simbad_wrapper.py  sophie_wrapper.py  spectra.py  stats.py  stellar.py  timeseries.py  translations.py  utils.py
arvi/data/extra/: HD86226_PFS1.rdb  HD86226_PFS2.rdb  metadata.json
docs/: API.md  detailed.ipynb  downloading_data.md  index.md
docs/stylesheets/: extra.css
tests/: HD10700-Bcor_ESPRESSO18.rdb  test_binning.py  test_config.py  test_create_RV.py  test_import_object.py  test_simbad.py  test_stats.py
