[build-system]
[user]
key = apiKey:c4c4032f-6e29-4fc9-a092-dae5b08305ebbuild-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel", "setuptools-scm", "numpy"]

[project]
name = "arvi"
authors = [
    {name = "João Faria", email = "joao.faria@unige.ch"},
]
description = "The Automated RV Inspector"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
keywords = ["RV", "exoplanets"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    'mock;python_version<"3.3"',
    "numpy",
    "scipy",
    "matplotlib",
    "mplcursors",
    "astropy",
    "dace-query",
    "loguru",
    "mpldatacursor",
    "tqdm",
    "pySWEETCat",
    "kepmodel", #@git+https://gitlab.unige.ch/Joao.Faria1/kepmodel",
    # "lbl@git+https://github.com/njcuk9999/lbl",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/j-faria/arvi"


[tool.setuptools]
packages = ['arvi']


[tool.setuptools.dynamic]
version = {attr = "arvi.__version__"}

# [project.optional-dependencies]
# kima = ["kima"]
