[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel", "setuptools-scm", "numpy"]

[project]
name = "arvi"
authors = [
    {name = "João Faria", email = "joao.faria@unige.ch"},
]
description = "The Automated RV Inspector"
version = "0.1.15"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
keywords = ["RV", "exoplanets"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    'mock;python_version<"3.3"',
    "numpy",
    "scipy",
    "matplotlib",
    "astropy",
    "dace-query",
    "loguru",
    "tqdm",
    "pySWEETCat",
    "kepmodel",
    # "lbl@git+https://github.com/njcuk9999/lbl",
]

[project.urls]
Repository = "https://github.com/j-faria/arvi"


[tool.setuptools]
packages = ['arvi']


[tool.setuptools.dynamic]
version = {attr = "arvi.__version__"}

# [project.optional-dependencies]
# kima = ["kima"]
